Add app migrations to .gitignore.
Since the project is not in production phase, it is not necessary to
keep track of migrations.

--- a/.gitignore
+++ b/.gitignore
@@ -755,3 +755,4 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/git,vim,venv,macos,django,python,visualstudio,visualstudiocode
+app/migrations/*
