--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 asgiref==3.7.2
+Babel==2.12.1
 Django==4.2.4
 django-filter==23.2
+django-money==3.2.0
 djangorestframework==3.14.0
 Pillow==10.0.0
+py-moneyed==3.0
 python-dotenv==1.0.0
 pytz==2023.3
 sqlparse==0.4.4
+typing_extensions==4.7.1
