--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,12 @@ Django==4.2.4
 django-filter==23.2
 django-money==3.2.0
 djangorestframework==3.14.0
+Faker==19.2.0
 Pillow==10.0.0
 py-moneyed==3.0
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
+six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
