--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/git,vim,venv,macos,django,python,visualstudio,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=git,vim,venv,macos,django,python,visualstudio,visualstudiocode
 
+### Static images ###
+media_root/*.png
+
 ### Django ###
 *.log
 *.pot
