--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Babel==2.12.1
 certifi==2023.7.22
 charset-normalizer==3.2.0
 Django==4.2.4
+django-cors-headers==4.2.0
 django-filter==23.2
 django-money==3.2.0
 djangorestframework==3.14.0
