--- a/requirements.txt
+++ b/requirements.txt
@@ -11,20 +11,25 @@ django-cors-headers==4.2.0
 django-filter==23.2
 django-money==3.2.0
 djangorestframework==3.14.0
+drf-yasg==1.21.7
 Faker==19.2.0
 frozenlist==1.4.0
 idna==3.4
+inflection==0.5.1
 multidict==6.0.4
 openai==0.27.8
+packaging==23.1
 Pillow==10.0.0
 py-moneyed==3.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
+PyYAML==6.0.1
 requests==2.31.0
 six==1.16.0
 sqlparse==0.4.4
 tqdm==4.65.0
 typing_extensions==4.7.1
+uritemplate==4.1.1
 urllib3==2.0.4
 yarl==1.9.2
