--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,57 @@
+agate==1.7.1
+agate-dbf==0.2.2
+agate-excel==0.2.5
+agate-sql==0.5.9
 aiohttp==3.8.5
 aiosignal==1.3.1
+appdirs==1.4.4
 asgiref==3.7.2
 async-timeout==4.0.2
 attrs==23.1.0
 Babel==2.12.1
 certifi==2023.7.22
 charset-normalizer==3.2.0
+csvkit==1.1.1
+dbfread==2.0.7
 Django==4.2.4
+django-admin-honeypot-advanced==1.0.1
 django-cors-headers==4.2.0
 django-filter==23.2
+django-ipware==5.0.0
 django-money==3.2.0
 djangorestframework==3.14.0
 drf-yasg==1.21.7
+et-xmlfile==1.1.0
 Faker==19.2.0
 frozenlist==1.4.0
+fs==2.4.16
+greenlet==2.0.2
 idna==3.4
 inflection==0.5.1
+isodate==0.6.1
+leather==0.3.4
 multidict==6.0.4
+olefile==0.46
 openai==0.27.8
+openpyxl==3.1.2
 packaging==23.1
+parsedatetime==2.6
 Pillow==10.0.0
 py-moneyed==3.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+python-slugify==8.0.1
+pytimeparse==1.1.8
 pytz==2023.3
 PyYAML==6.0.1
 requests==2.31.0
 six==1.16.0
+SQLAlchemy==1.4.49
 sqlparse==0.4.4
+text-unidecode==1.3
 tqdm==4.65.0
 typing_extensions==4.7.1
 uritemplate==4.1.1
 urllib3==2.0.4
+xlrd==2.0.1
 yarl==1.9.2
